# UsbCameraRtspServer

./: CMakeLists.txt  CameraDevice.cpp  CameraDevice.hpp  FfmpegEncoder.cpp  FfmpegEncoder.h  FfmpegFrameSource.cpp  FfmpegFrameSource.h  FfmpegH264LiveServerMediaSubsession.cpp  FfmpegH264LiveServerMediaSubsession.h  README.md  UsbCameraOnDemandRTSPServer.cpp  UsbCameraOnDemandRTSPServer.h  UsbCameraServer-ffmpeg2.8.vcxproj  UsbCameraServer-ffmpeg2.8.vcxproj.filters  UsbCameraServer.sln  compile.sh  main.cpp
live/: config.linux-with-shared-libraries
live/BasicUsageEnvironment/: BasicTaskScheduler.cpp  Makefile
live/BasicUsageEnvironment/include/: BasicUsageEnvironment_version.hh
live/UsageEnvironment/: Makefile
live/UsageEnvironment/include/: UsageEnvironment_version.hh
live/groupsock/: Makefile
live/groupsock/include/: groupsock_version.hh
live/liveMedia/: Makefile
live/liveMedia/include/: liveMedia_version.hh
live/testProgs/: Makefile  testRTSPClient.cpp
